fix: add z-index 999 to property in header component

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 .header-container{
     position: fixed;
-    z-index: 2;
+    z-index: 999;
     width: 90%;
     padding: 20px;
     padding: 20px;
